force-app/main/default/objects/Ghost_Coaching_Template2__c/Ghost_Coaching_Template2__c.object-meta.xml
<CustomObject>
    <label>Coaching Template</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>