force-app/main/default/objects/Ghost_Coaching_Template2__c/fields/Passing_Score__c.field-meta.xml
<CustomField>
    <fullName>Passing_Score__c</fullName>
    <label>Passing Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>