force-app/main/default/objects/Ghost_Coaching_Template2__c/fields/Schema_Probe__c.field-meta.xml
<CustomField>
    <fullName>Schema_Probe__c</fullName>
    <label>Schema Probe</label>
    <length>50</length>
    <type>Text</type>
</CustomField>