force-app/main/default/objects/Ghost_Coaching_Template2__c/fields/Template_Title__c.field-meta.xml
<CustomField>
    <fullName>Template_Title__c</fullName>
    <description>Business-facing template name shown to admins and field managers.</description>
    <label>Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>