force-app/main/default/objects/Ghost_Coaching_Template2__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Coaching</fullName>
                <default>true</default>
                <label>Field Coaching</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>