force-app/main/default/objects/Ghost_Coaching_Template2__c/fields/Zeta_QJSON_V1__c.field-meta.xml
<CustomField>
    <fullName>Zeta_QJSON_V1__c</fullName>
    <label>Zeta QJSON V1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>