force-app/main/default/objects/Ghost_Coaching_Template2__c/fields/Zeta_Tooling_QJSON__c.field-meta.xml
<CustomField>
    <fullName>Zeta_Tooling_QJSON__c</fullName>
    <label>Zeta Tooling QJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>